--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context="ir.nazery.zekrshomar.CounterFragment">
+    tools:context=".fragments.CounterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
