--- a/app/src/main/res/layout/fragment_list_zekr.xml
+++ b/app/src/main/res/layout/fragment_list_zekr.xml
@@ -7,16 +7,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/zekrList_recyclerView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/zekrList_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/zekrList_textView_emptyMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:text="ذکری موجود نیست"
+            android:textSize="28sp" />
+    </RelativeLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/zekrList_floatButton_addZekr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="fabClick"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:src="@drawable/add" />
