--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -3,63 +3,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".fragments.CounterFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="3">
 
         <EditText
             android:id="@+id/counter_zekrName_textView"
+            fontPath="font/b_yekan.ttf"
             android:layout_width="0dp"
-            android:layout_weight="4"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:gravity="center_horizontal"
-            android:textColor="#000"
+            android:layout_weight="2"
+            android:gravity="center"
             android:hint="@string/zekrName"
-            android:inputType="textAutoComplete" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:inputType="textAutoComplete"
+            android:textColor="#000"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:weightSum="2">
 
         <EditText
             android:id="@+id/counter_zekrCount_textView"
+            fontPath="font/b_yekan.ttf"
             android:layout_width="0dp"
-            android:layout_weight="2"
             android:layout_height="wrap_content"
-            android:textSize="19sp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:textColor="#000"
             android:hint="@string/zekrCount"
-            android:inputType="number" />
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:inputType="number"
+            android:textColor="#000"
+            android:textSize="19sp" />
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/emptyView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
