--- a/app/src/main/res/layout/zekr_list_row.xml
+++ b/app/src/main/res/layout/zekr_list_row.xml
@@ -5,11 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="110dp"
     android:layout_margin="16dp"
+    android:layout_marginBottom="100dp"
+    android:layout_marginTop="100dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="#fff"
     card_view:cardCornerRadius="10dp">
 
     <TextView
         android:id="@+id/list_name_textView"
+        fontPath="font/b_yekan.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -20,6 +25,7 @@
 
     <TextView
         android:id="@+id/list_family_textView"
+        fontPath="font/b_yekan.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
