--- a/app/src/main/res/layout/activity_aboutus_bazar.xml
+++ b/app/src/main/res/layout/activity_aboutus_bazar.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/about_title"
             fontPath="font/b_yekan.ttf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,21 +26,21 @@
             android:textSize="20sp" />
 
         <LinearLayout
-            android:id="@+id/foooo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="25dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/rectangle"
+            android:contentDescription="https://cafebazaar.ir/app/ir.nazeri.materialcolor/?l=fa"
             android:gravity="center"
-            android:onClick="showAsreZohur"
+            android:onClick="showLink"
             android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/asrezohur_icon" />
+                android:src="@drawable/material_design_icon" />
 
             <TextView
                 fontPath="font/b_yekan.ttf"
@@ -47,9 +48,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:text="کتاب الکترونیکی عصر ظهور"
+                android:text="اپلیکیشن متریال کالر"
                 android:textColor="#000"
                 android:textSize="20dp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -59,8 +61,9 @@
             android:layout_marginBottom="25dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/rectangle"
+            android:contentDescription="https://cafebazaar.ir/app/ir.nazery.timetilleftar/?l=fa"
             android:gravity="center"
-            android:onClick="showTaeftar"
+            android:onClick="showLink"
             android:orientation="vertical">
 
             <ImageView
@@ -78,7 +81,6 @@
                 android:textColor="#000"
                 android:textSize="20dp" />
         </LinearLayout>
-
 
     </LinearLayout>
 </ScrollView>
