--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,20 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_aboutus"
+        android:id="@+id/action_vibrate"
+        android:checkable="true"
+        android:checked="true"
         android:orderInCategory="1"
+        android:title="ویبره گوشی"
         android:visible="true"
-        android:title="درباره ما"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="1"
-        android:visible="false"
-        android:title="@string/action_settings"
+        android:id="@+id/action_aboutus"
+        android:orderInCategory="2"
+        android:title="درباره ما"
+        android:visible="true"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_rate"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="نظر به برنامه"
         app:showAsAction="never" />
 </menu>
